<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/shape_white_bg_corner13"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:textColor="#FF101010"
        android:textSize="20sp"
        android:text="@string/trade_phone_check"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="28dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dip"
                android:text="@string/trade_phoneNum"
                android:textColor="#FF030303"
                android:textSize="17dp" />

            <com.ez08.trade.ui.view.MyDelEditetext
                android:id="@+id/etInputPhoneNum"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="25dip"
                android:background="@drawable/shape_login_input_bg"
                android:ems="11"
                android:maxLength="11"
                android:hint="@string/trade_input_phoneNum"
                android:numeric="integer"
                android:singleLine="true"
                android:textColorHint="#c9c9c9"
                android:textCursorDrawable="@null"
                android:textSize="14dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="28dip"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dip"
                android:text="@string/trade_verifity"
                android:textColor="#FF030303"
                android:textSize="17dp" />

            <com.ez08.trade.ui.view.MyDelEditetext
                android:id="@+id/etInputVertify"
                android:layout_width="100dp"
                android:layout_height="28dp"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:background="@drawable/shape_login_input_bg"
                android:ems="4"
                android:hint="@string/trade_input_verifity"
                android:inputType="text"
                android:numeric="integer"
                android:maxLines="1"
                android:textColorHint="#c9c9c9"
                android:textCursorDrawable="@null"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/btnSendVerfity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:clickable="false"
                android:gravity="center_vertical"
                android:text="@string/trade_send_verifity"
                android:textColor="#5677FC"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginTop="12dp"
        android:background="#E1E1E1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/login_input_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/trade_input_cancel"
            android:textColor="@color/trade_black"
            android:textSize="15sp" />
        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#E1E1E1" />
        <TextView
            android:id="@+id/login_input_commit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/trade_input_commit"
            android:textColor="#5677FC"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>