<?xml version="1.0" encoding="utf-8"?>
<com.ez08.trade.ui.view.TradeBatView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <EditText
        android:id="@+id/input_code"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/trade_input_code_hit"
        android:inputType="text"
        android:maxLines="1"
        android:padding="5dp"
        android:background="@null"
        android:textColor="@color/trade_black"
        android:textColorHint="@color/trade_input_text"
        android:textSize="13dp" />

    <com.ez08.trade.ui.view.AdjustEditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hint="委托价格"
        app:unit="0.01"
        android:layout_marginTop="8dp"/>

    <com.ez08.trade.ui.view.AdjustEditText
        android:id="@+id/single_num"
        app:hint="单笔数量"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:unit="100"
        android:layout_marginTop="8dp"/>

    <com.ez08.trade.ui.view.AdjustEditText
        android:id="@+id/total_num"
        app:hint="委托数量"
        app:unit="100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <RelativeLayout
        android:id="@+id/max_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/available_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="可用多少股"
            android:textColor="@color/trade_input_text"
            android:textSize="12dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/full"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/trade_full_available"
            android:textColor="@color/trade_black"
            android:textSize="12dp" />

        <View
            android:layout_width="10dp"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/half"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/trade_half_available"
            android:textColor="@color/trade_black"
            android:textSize="12dp" />

        <View
            android:layout_width="10dp"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/one_three"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/trade_one_third_available"
            android:textColor="@color/trade_black"
            android:textSize="12dp" />

        <View
            android:layout_width="10dp"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/one_fourth"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/trade_one_fourth_available"
            android:textColor="@color/trade_black"
            android:textSize="12dp" />

    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/trade_red_corner_full"
        android:gravity="center"
        android:text="@string/trade_buy_action"
        android:textColor="@color/trade_white"
        android:textSize="13dp" />


</com.ez08.trade.ui.view.TradeBatView>