<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:background="@color/trade_little_gray"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="left"
        android:text="@string/trade_stock_name"
        android:layout_marginLeft="12dp"
        android:textColor="@color/trade_item_text"
        android:textSize="12dp" />

    <TextView
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="right"
        android:text="盈亏/比例"
        android:textColor="@color/trade_item_text"
        android:textSize="12dp" />

    <TextView
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="right"
        android:text="@string/trade_hand_available"
        android:textColor="@color/trade_item_text"
        android:textSize="12dp" />

    <TextView
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="right"
        android:text="@string/trade_prime_last"
        android:textColor="@color/trade_item_text"
        android:textSize="12dp" />
</LinearLayout>