<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/bar_layout"
        layout="@layout/toolbar_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            style="@style/trade_edit_title_custom"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/trade_risk_type" />

        <TextView
            android:id="@+id/type"
            style="@style/trade_edit_content_custom"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/title"
            android:textColor="@color/trade_red" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/trade_gray" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            style="@style/trade_edit_title_custom"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/trade_risk_score" />

        <TextView
            android:id="@+id/score"
            style="@style/trade_edit_content_custom"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/title"
            android:hint="@string/trade_change_edit_hit"
            android:textColor="@color/trade_red" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/trade_gray" />

</LinearLayout>